# elementary-cellular-automaton-haskell

./: README.md  elementary-cellular-automaton.cabal
src/Data/CellularAutomata/OneDimensional/: ElementaryCellularAutomata.hs
